--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/opensans/v20/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+#root {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+ /* 
+  * Colors 
+  * https://coolors.co/fbf9f3-2b2a2a-ffa977-fa896b-e35a51
+  */
+
+:root {
+  --off-white: #fbf9f3;
+  --off-black: #2b2a2a;
+
+  --yellow: #ffe78f;
+  --orange: #ffa977;
+  --orange-red: #fa896b;
+  --orange-red-half: rgb(250, 137, 107, .75);
+  --red: #e35a51;
+
+  --main-bg-color: var(--off-white);
+  --main-text-color: var(--off-black);
+
+  --theme-color: var(--orange-red);
+  --theme-color-half: var(--orange-red-half);
+  --theme-color-light: var(--orange);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html {
+  font-size: 1rem;
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
