--- a/src/Styles/HeaderFooter.css
+++ b/src/Styles/HeaderFooter.css
@@ -1,40 +1,51 @@
 .stuck {
-  padding: 1rem;
-  background-color: var(--theme-color-light);
-  position: fixed;
+  display: flex;
+  position: relative;
+  align-items: center;
   width: 100%;
+  height: 2rem;
 }
 
 .header-container {
   top: 0;
   left: 0;
+  margin-top: 1rem;
 }
 
 .footer-container {
   bottom: 0;
   left: 0;
+  margin-bottom: 1rem;
 }
 
-.menu-list a {
-  font-weight: 500;
+.header-name {
+  font-size: 110%;
+  font-weight: bold;
+  letter-spacing: 1.5px;
   color: var(--main-text-color);
 
-  border-radius: 2px;
-  display: block;
-  padding: 0.3em 0.5em;
+  position: absolute;
+  left: 0rem;
+  margin-left: 4rem;
 }
 
-.menu-list a:hover {
-  color: var(--theme-color);
-  background-color: transparent;
+.header-name:hover {
+  color: var(--theme-color-dark);
 }
 
-.menu-list li ul {
-  border-left: 1px solid var(--grey-dark);
-  margin: 0.75em;
-  padding-left: 0.75em;
+.navigation {
+  position: absolute;
+  right: 0rem;
+  margin-right: 4rem;
 }
 
-.is-hidden {
-  display: none;
+.navigation-link {
+  color: var(--main-text-color);
+  padding: 0rem 1rem;
+}
+
+.footer-info {
+  position: absolute;
+  right: 0rem;
+  margin-right: 4rem;
 }
