--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,11 +1,12 @@
 .home-grid {
   box-sizing: border-box;
   justify-content: center;
+  text-align: center;
   align-items: center;
   display: flex;
 
-  padding: 2.5rem;
-  min-height: 100vh;
+  padding: 1.5rem 2.5rem;
+  min-height: calc(100vh - 6rem);
   width: 100%;
 }
 
@@ -51,9 +52,4 @@ a {
 
 a:hover {
   color: var(--theme-color-dark);
-}
-
-.note {
-  color: var(--theme-color-faded);
-  font-size: .8rem;
 }
