--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/opensans/v20/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/opensans/v20/mem8YaGs126MiZpBA-UFVZ0b.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 #root {
@@ -12,7 +15,7 @@
   flex-direction: column;
 }
 
- /* 
+/* 
   * Colors 
   * https://coolors.co/a3e7f7-3bbbd1-0d87a6-f8fdff-fbf9f3-2b2a2a-ffe78f-ffa977-fa896b-e35a51
   */
@@ -20,26 +23,21 @@
 :root {
   --off-white: #fbf9f3;
   --off-black: #2b2a2a;
+  --off-white-blue: #f8fdff;
 
-  --yellow: #ffe78f;
-  --orange: #ffa977;
-  --orange-red: #fa896b;
-  --orange-red-half: rgb(250, 137, 107, .75);
-  --red: #e35a51;
-
-  --off-white-blue: #F8FDFF;
+  --grey: #a5a5a5;
+  --grey-dark: #606060;
+  --green: #60a3a6;
+  --green-dark: #297f83;
   --blue: #6691bd;
-  --blue-light: #94b2d1;
   --blue-dark: #1e5a96;
-  --blue-half: rgb(102, 145, 189, .4);
+  --purple: #a37eaa;
+  --purple-dark: #884486;
 
   --main-bg-color: var(--off-white-blue);
   --main-text-color: var(--off-black);
-
   --theme-color: var(--blue);
-  --theme-color-light: var(--blue-light); 
   --theme-color-dark: var(--blue-dark);
-  --theme-color-half: var(--blue-half); 
 }
 
 html {
@@ -49,4 +47,72 @@ html {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.app-grid {
+  box-sizing: border-box;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  display: flex;
+
+  padding: 1.5rem 2.5rem;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.app-container {
+  box-sizing: border-box;
+  align-items: center;
+
+  padding: 2rem;
+  width: 100%;
+  max-width: 80rem;
+
+  flex-direction: row;
+}
+
+.page-container {
+  box-sizing: border-box;
+  align-items: center;
+
+  padding: 2rem;
+  width: 100%;
+  max-width: 50rem;
+}
+
+a {
+  transition: all 0.1s ease;
+}
+
+.c0 {
+  color: var(--grey, inherit);
+  text-decoration: none;
+}
+.c0:hover {
+  color: var(--grey-dark);
+}
+
+.c1 {
+  color: var(--green, inherit);
+  text-decoration: none;
+}
+.c1:hover {
+  color: var(--green-dark);
+}
+
+.c2 {
+  color: var(--blue, inherit);
+  text-decoration: none;
+}
+.c2:hover {
+  color: var(--blue-dark);
+}
+
+.c3 {
+  color: var(--purple, inherit);
+  text-decoration: none;
+}
+.c3:hover {
+  color: var(--purple-dark);
 }
