hide nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,6 @@
   flex-direction: column;
 }
 
-/* 
-  * Colors 
-  * https://coolors.co/a3e7f7-3bbbd1-0d87a6-f8fdff-fbf9f3-2b2a2a-ffe78f-ffa977-fa896b-e35a51
-  */
-
 :root {
   --off-white: #fbf9f3;
   --off-black: #2b2a2a;
@@ -59,25 +54,31 @@ html {
   padding: 1.5rem 2.5rem;
   min-height: 100vh;
   width: 100%;
+
+  @media (max-width: 960px) {
+    padding: 0.5rem;
+  }
 }
 
-.app-container {
-  box-sizing: border-box;
-  align-items: center;
-
-  padding: 2rem;
-  width: 100%;
-  max-width: 80rem;
-
-  flex-direction: row;
-}
-
+.app-container,
 .page-container {
   box-sizing: border-box;
   align-items: center;
 
   padding: 2rem;
   width: 100%;
+
+  @media (max-width: 960px) {
+    padding: 1rem;
+  }
+}
+
+.app-container {
+  max-width: 80rem;
+  flex-direction: row;
+}
+
+.page-container {
   max-width: 50rem;
 }
 
