--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -1,10 +1,9 @@
 #navigation {
   min-width: 20%;
-  display: flex;
-  justify-content: right;
-  align-content: right;
-  justify-items: right;
-  align-items: right;
+
+  @media (max-width: 60rem) {
+    display: none;
+  }
 }
 
 #navigation .item {
@@ -13,6 +12,10 @@
   padding: 8px 0px;
   cursor: pointer;
   position: relative;
+
+  @media (max-width: 60rem) {
+    display: none;
+  }
 }
 
 #navigation .item .icon {
