--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -41,3 +41,12 @@
 #navigation .c3 .hovered .border {
   border-right: 3px solid var(--purple-dark);
 }
+
+#navigation span.text {
+  opacity: 0;
+  transition: opacity 0.15s;
+}
+
+#navigation span.text.expanded {
+  opacity: 1;
+}
